---------------------------------------------------------------------------
Version 5.6.4  [V5-STABLE] (rgerhards), 2011-02-25
- bugfix: memory leak when $RepeatedMsgReduction on was used
  bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=225
---------------------------------------------------------------------------
Version 5.6.3  [V5-STABLE] (rgerhards), 2011-01-26
- bugfix: action processor released mememory too early, resulting in
  potential issue in retry cases (but very unlikely due to another
  bug, which I also fixed -- only after the fix this problem here
  became actually visible).
- bugfix: batch processing flagged invalid message as "bad" under some
  circumstances
- bugfix: unitialized variable could cause issues under extreme conditions
  plus some minor nits. This was found after a clang static code analyzer
  analysis (great tool, and special thanks to Marcin for telling me about
  it!)
- bugfix: batches which had actions in error were not properly retried in
  all cases
- bugfix: imfile did duplicate messages under some circumstances
- bugfix: testbench was not activated if no Java was present on system
  ... what actually was a left-over. Java is no longer required.
---------------------------------------------------------------------------
Version 5.6.2  [V5-STABLE] (rgerhards), 2010-11-30
- bugfix: compile failed on systems without epoll_create1()
  Thanks to David Hill for providing a fix.
- bugfix: atomic increment for msg object may not work correct on all
  platforms. Thanks to Chris Metcalf for the patch
- bugfix: replacements for atomic operations for non-int sized types had
  problems. At least one instance of that problem could potentially lead
  to abort (inside omfile).
---------------------------------------------------------------------------
Version 5.6.1  [V5-STABLE] (rgerhards), 2010-11-24
- bugfix(important): problem in TLS handling could cause rsyslog to loop